# VoiceVaultAlgorand

./: .gitignore  README.md
VoiceVault/: README.md
VoiceVault/projects/VoiceVault/: README.md  pyproject.toml  x402_walkthrough.md
VoiceVault/projects/VoiceVault/.algokit/: .copier-answers.yml
VoiceVault/projects/VoiceVault/api/: __init__.py  config.py  test_client.py
VoiceVault/projects/VoiceVault/smart_contracts/artifacts/voice/: voice_app_client.py
VoiceVault/projects/VoiceVault/smart_contracts/hello_world/: contract.py
VoiceVault/projects/VoiceVault/smart_contracts/payment/: contract.py  deploy_config.py
VoiceVault/projects/VoiceVault/smart_contracts/voice/: contract.py
contracts/projects/VoiceVault/: .algokit.toml  README.md  pyproject.toml
contracts/projects/VoiceVault/api/: algorand_state.py  buyer_demo.py  main.py
contracts/projects/VoiceVault/smart_contracts/: __main__.py
contracts/projects/VoiceVault/smart_contracts/artifacts/hello_world/: HelloWorldContract.approval.puya.map  HelloWorldContract.approval.teal  PaymentApp.approval.puya.map  PaymentApp.approval.teal  hello_world_contract_client.py  payment_app_client.py
contracts/projects/VoiceVault/smart_contracts/artifacts/payment/: PaymentApp.approval.puya.map  PaymentApp.approval.teal  payment_app_client.py
contracts/projects/VoiceVault/smart_contracts/artifacts/payment_app/: approval.teal  contract.json
contracts/projects/VoiceVault/smart_contracts/hello_world/: contract.py  helpers.py  voice.py
contracts/projects/VoiceVault/smart_contracts/voice/: deploy_config.py
docs/: x402.md  (+1 more)
(+41 files in other folders)
