[tool.poetry]
name = "VoiceVault"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["ghoshvidip26 <ghoshvidip26@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"
algorand-python = "^3"
algorand-python-testing = "^1"
fastapi = "^0.135.3"
uvicorn = { version = "^0.44.0", extras = ["standard"] }
x402-avm = { version = "^2.0.2", extras = ["fastapi", "avm"] }

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.1.0"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
